tests/src/frontend/typechecking/invalid/named_arg.sk
class X{a: Int, b: Float}

fun main(): void {
  a = 10;
  b = 1;
  _ = X{a => a, b => b};
  print_string("Hello Skip!")
}
